# BrandNavigator

./: .gitignore  README.md  app.py  env.example  pyproject.toml  requirements.txt  start.sh  structure.md
agents/: evaluator.py  market_research.py  orchestrator.py  qa.py  reporter.py
routes/: analysis.py  qa.py  settings.py
templates/: index.html  settings.html
tests/: conftest.py  test_app.py
